k8s/prod/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
